--- a/formats/logger/i18n/en.json
+++ b/formats/logger/i18n/en.json
@@ -1,8 +1,10 @@
 {
     "edit": "{{user|$1}} edited {{link|$2}} {{diffSize|$3}} {{diff|$4}} {{summary|$5}}",
-    "editthread": "{{user|$1}} edited reply on {{board|$2|$3}} {{diffSize|$4}} {{diff|$5}}",
+    "edit-post": "{{user|$1}} edited {{link|Thread:$2|$3}} on {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
+    "edit-reply": "{{user|$1}} edited reply to {{link|Thread:$2|$3}} on {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
     "new": "{{user|$1}} created {{link|$2}} {{diffSize|$3}} {{summary|$4}}",
-    "newthread": "{{user|$1}} posted {{link|$2|$3}} on {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
+    "new-post": "{{user|$1}} posted {{link|Thread:$2|$3}} on {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
+    "new-reply": "{{user|$1}} replied to {{link|Thread:$2|$3}} on {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
     "threadclose": "{{user|$1}} closed {{link|$2|$3}} on {{board|$4|$5}} {{summary|$6}}",
     "threadreopen": "{{user|$1}} reopened {{link|$2|$3}} on {{board|$4|$5}} {{summary|$6}}",
     "threadremove": "{{user|$1}} removed {{link|$2|$3}} from {{board|$4|$5}} {{summary|$6}}",
@@ -29,7 +31,7 @@
     "remavatar": "{{user|$1}} removed avatar of {{user|$2}}",
     "abusefilter": "{{user|$1}} modified abuse filter ID $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
     "newusers": "{{user|$1}} created an account",
-    "wikifeatures": "{{user|$1}} set wiki feature $2 to $3",
+    "wikifeatures": "{{user|$1}} has $2 the $3 wiki feature",
     "chatbanadd": "{{user|$1}} banned {{user|$2}} from chat for $3 {{summary|$4}}",
     "chatbanchange": "{{user|$1}} changed the chat ban for {{user|$2}} to $3 {{summary|$4}}",
     "chatbanremove": "{{user|$1}} has ended the chat ban for {{user|$2}} {{summary|$3}}",
@@ -52,5 +54,16 @@
     "discussions-create-report": "reported",
     "discussions-deleted": "deleted",
     "discussions-un-deleted": "undeleted",
-    "discussions-modified": "edited"
+    "discussions-modified": "edited",
+    "feature-enable": "enabled",
+    "feature-disable": "disabled",
+    "feature-wgEnableAjaxPollExt": "polls",
+    "feature-wgEnableBlogArticles": "blogs",
+    "feature-wgEnableArticleCommentsExt": "article comments",
+    "feature-wgEnableCategoryExhibitionExt": "category exhibition",
+    "feature-wgEnableWallExt": "Message Walls",
+    "feature-wgEnablePortableInfoboxEuropaTheme": "Europa Infobox Theme",
+    "feature-wgEnableMediaGalleryExt": "new galleries",
+    "feature-wgEnableChat": "chat",
+    "feature-wgDisableAnonymousEditing": "the account requirement"
 }
