Updated README and made thread logs display titles and proper links

--- a/formats/logger/i18n/en.json
+++ b/formats/logger/i18n/en.json
@@ -5,11 +5,11 @@
     "new": "{{user|$1}} created {{link|$2}} {{diffSize|$3}} {{summary|$4}}",
     "new-post": "{{user|$1}} posted {{link|Thread:$2|$3}} on {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
     "new-reply": "{{user|$1}} replied to {{link|Thread:$2|$3}} on {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
-    "threadclose": "{{user|$1}} closed {{link|$2|$3}} on {{board|$4|$5}} {{summary|$6}}",
-    "threadreopen": "{{user|$1}} reopened {{link|$2|$3}} on {{board|$4|$5}} {{summary|$6}}",
-    "threadremove": "{{user|$1}} removed {{link|$2|$3}} from {{board|$4|$5}} {{summary|$6}}",
-    "threaddelete": "{{user|$1}} deleted {{link|$2|$3}} from {{board|$4|$5}} {{summary|$6}}",
-    "threadrestore": "{{user|$1}} restored {{link|$2|$3}} to {{board|$4|$5}} {{summary|$6}}",
+    "threadclose": "{{user|$1}} closed {{link|Thread:$2|$3}} on {{board|$4|$5}} {{summary|$6}}",
+    "threadreopen": "{{user|$1}} reopened {{link|Thread:$2|$3}} on {{board|$4|$5}} {{summary|$6}}",
+    "threadremove": "{{user|$1}} removed {{link|Thread:$2|$3}} from {{board|$4|$5}} {{summary|$6}}",
+    "threaddelete": "{{user|$1}} deleted {{link|Thread:$2|$3}} from {{board|$4|$5}} {{summary|$6}}",
+    "threadrestore": "{{user|$1}} restored {{link|Thread:$2|$3}} to {{board|$4|$5}} {{summary|$6}}",
     "block": "{{user|$1}} blocked {{user|$2}} for $3 [$4] {{summary|$5}}",
     "unblock": "{{user|$1}} unblocked {{user|$2}} {{summary|$3}}",
     "reblock": "{{user|$1}} changed block for {{user|$2}} to $3 [$4] {{summary|$5}}",
