Very large commit for the god of large commits

--- a/formats/logger/i18n/en.json
+++ b/formats/logger/i18n/en.json
@@ -35,19 +35,12 @@
     "chatbanadd": "{{user|$1}} banned {{user|$2}} from chat for $3 {{summary|$4}}",
     "chatbanchange": "{{user|$1}} changed the chat ban for {{user|$2}} to $3 {{summary|$4}}",
     "chatbanremove": "{{user|$1}} has ended the chat ban for {{user|$2}} {{summary|$3}}",
-    "action-disallow": "Action prevented",
-    "action-tag": "Action tagged",
-    "action-block": "User blocked",
-    "action-warn": "User warned",
-    "action-throttle": "Action throttled",
     "board-1201": "$1's wall",
     "board-2001": "$1 board",
     "diff": "diff",
     "talk": "t",
     "contribs": "c",
-    "message": "a message",
     "rights-none": "(none)",
-    "start": "$1 v$2 successfully initialized!",
     "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) in $7 {{summary|$8}}",
     "discussions-reply": "a reply",
     "discussions-create-post": "posted",
@@ -55,6 +48,7 @@
     "discussions-deleted": "deleted",
     "discussions-un-deleted": "undeleted",
     "discussions-modified": "edited",
+    "discussions-moved": "moved",
     "feature-enable": "enabled",
     "feature-disable": "disabled",
     "feature-wgEnableAjaxPollExt": "polls",
