--- a/formats/logger/i18n/ru.json
+++ b/formats/logger/i18n/ru.json
@@ -1,57 +1,63 @@
 {
     "edit": "{{user|$1}} отредактировал страницу {{link|$2}} {{diffSize|$3}} {{diff|$4}} {{summary|$5}}",
-    "editthread": "{{user|$1}} отредактировал ответ в теме {{board|$2|$3}} {{diffSize|$4}} {{diff|$5}}",
+    "edit-post": "{{user|$1}} отредактировал {{link|Thread:$2|$3}} в теме {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
+    "edit-reply": "{{user|$1}} отредактировал ответ в {{link|Thread:$2|$3}} в теме {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
     "new": "{{user|$1}} создал страницу {{link|$2}} {{diffSize|$3}} {{summary|$4}}",
-    "newthread": "{{user|$1}} создал обсуждение {{link|$2|$3}} в теме {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
+    "new-post": "{{user|$1}} создал обсуждение {{link|Thread:$2|$3}} в теме {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
+    "new-reply": "{{user|$1}} replied to {{link|Thread:$2|$3}} в теме {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
     "threadclose": "{{user|$1}} закрыл обсуждение {{link|$2|$3}} в теме {{board|$4|$5}} {{summary|$6}}",
+    "threadreopen": "{{user|$1}} reopened {{link|Thread:$2|$3}} on {{board|$4|$5}} {{summary|$6}}",
     "threadremove": "{{user|$1}} убрал обсуждение {{link|$2|$3}} из темы {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} удалил обсуждение {{link|$2|$3}} в теме {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} восстановил обсуждение {{link|$2|$3}} в теме {{board|$4|$5}} {{summary|$6}}",
-    "block": "{{user|$1}} заблокировал {{userlink|$2}} на $3 [$4] {{summary|$5}}",
-    "unblock": "{{user|$1}} разблокировал {{userlink|$2}} {{summary|$3}}",
-    "reblock": "{{user|$1}} изменил блокировку для {{userlink|$2}} на $3 [$4] {{summary|$5}}",
+    "block": "{{user|$1}} заблокировал {{user|$2}} на $3 [$4] {{summary|$5}}",
+    "unblock": "{{user|$1}} разблокировал {{user|$2}} {{summary|$3}}",
+    "reblock": "{{user|$1}} изменил блокировку для {{user|$2}} на $3 [$4] {{summary|$5}}",
     "protect": "{{user|$1}} защитил страницу {{link|$2}} на $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} изменил защиту страницы {{link|$2}} на $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} снял защиту со страницы {{link|$2}} {{summary|$3}}",
-    "rights": "{{user|$1}} изменил права участника для {{userlink|$2}} с $3 до $4 {{summary|$5}}",
+    "moveprotect": "{{user|$1}} moved protection from $2 to {{link|$3}} {{summary|$4}}",
+    "rights": "{{user|$1}} изменил права участника для {{user|$2}} с $3 до $4 {{summary|$5}}",
     "delete": "{{user|$1}} удалил страницу $2 {{summary|$3}}",
     "restore": "{{user|$1}} восстановил правки на странице {{link|$2}} {{summary|$3}}",
     "revdel": "{{user|$1}} удалил правку $2 на странице $3 {{summary|$4}}",
-    "logdel": "{{user|$1}} скрыл событие в логах $2 {{summary|$4}}",
-    "upload": "{{user|$1}} загрузил файл {{link|$2}} {{summary|$3}}",
-    "reupload": "{{user|$1}} перезаписал файл {{link|$2}} {{summary|$3}}",
-    "revupload": "{{user|$1}} отменил загрузку файла $2 {{summary|$3}}",
+    "logdel": "{{user|$1}} скрыл событие в логах $2 {{summary|$3}}",
+    "upload": "{{user|$1}} загрузил файл {{link|$2|$3}} {{summary|$4}}",
+    "reupload": "{{user|$1}} перезаписал файл {{link|$2|$3}} {{summary|$4}}",
     "move": "{{user|$1}} переименовал $2 в {{link|$3}} {{summary|$4}}",
     "moveredir": "{{user|$1}} переименовал $2 в {{link|$3}} поверх перенаправления {{summary|$4}}",
-    "import": "{{user|$1}} импортировал страницу $2 {{summary|$3}}",
-    "patrol": "{{user|$1}} проверил правку на странице $2",
     "merge": "{{user|$1}} объединил истории страниц $2 и {{link|$3}} {{summary|$4}}",
     "avatar": "{{user|$1}} изменил аватар",
-    "remavatar": "{{user|$1}} убрал аватар участника $2",
+    "remavatar": "{{user|$1}} убрал аватар участника {{user|$2}}",
     "abusefilter": "{{user|$1}} улучшил фильтр злоупотребления ID $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
     "newusers": "{{user|$1}} создал аккаунт",
-    "wikifeatures": "{{user|$1}} изменил функцию вики: $2",
-    "chatbanadd": "{{user|$1}} забанил {{userlink|$2}} в чате на $3 {{summary|$4}}",
-    "chatbanchange": "{{user|$1}} изменил бан {{userlink|$2}} в чате на $3 {{summary|$4}}",
-    "chatbanremove": "{{user|$1}} снял бан в чате с {{userlink|$2}} {{summary|$3}}",
-    "debug": "Отладка: {{debug|$1}}",
-    "renameuser": "{{user|$1}} переименовал участника: $2",
-    "createpin": "{{user|$1}} создал новую точку на {{link|$2}} {{summary|$3}}",
-    "deletepin": "{{user|$1}} удалил точку для {{link|$2}}",
-    "updatepin": "{{user|$1}} обновил точку на {{link|$2}} {{summary|$3}}",
-    "createmap": "{{user|$1}} создал карту {{link|$2|$3}}",
-    "deletemap": "{{user|$1}} удалил карту",
-    "abuselog": "{{user|$1}} вызвал действие фильтра злоупотребления ID $2 ({{link|Special:AbuseFilter/$2|$3}}), совершив следующие действия: $4 $5. $6.",
-    "action-disallow": "Действие предотвращено",
-    "action-tag": "Действие помечено",
-    "action-block": "Участник заблокирован",
-    "action-warn": "Участник предупреждён",
+    "wikifeatures": "{{user|$1}} has $2 the $3 wiki feature",
+    "chatbanadd": "{{user|$1}} забанил {{user|$2}} в чате на $3 {{summary|$4}}",
+    "chatbanchange": "{{user|$1}} изменил бан {{user|$2}} в чате на $3 {{summary|$4}}",
+    "chatbanremove": "{{user|$1}} снял бан в чате с {{user|$2}} {{summary|$3}}",
     "board-1201": "стена $1",
     "board-2001": "тема $1",
     "diff": "изм",
     "talk": "обс",
     "contribs": "вкл",
-    "message": "сообщение",
-    "newwikis": "Новая вики! {{wiki|$1}}",
-    "start": "$1 v$2 успешно запущен!"
+    "rights-none": "(none)",
+    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) in $7 {{summary|$8}}",
+    "discussions-reply": "a reply",
+    "discussions-create-post": "posted",
+    "discussions-create-report": "reported",
+    "discussions-deleted": "deleted",
+    "discussions-un-deleted": "undeleted",
+    "discussions-modified": "edited",
+    "discussions-moved": "moved",
+    "feature-enable": "enabled",
+    "feature-disable": "disabled",
+    "feature-wgEnableAjaxPollExt": "polls",
+    "feature-wgEnableBlogArticles": "blogs",
+    "feature-wgEnableArticleCommentsExt": "article comments",
+    "feature-wgEnableCategoryExhibitionExt": "category exhibition",
+    "feature-wgEnableWallExt": "Message Walls",
+    "feature-wgEnablePortableInfoboxEuropaTheme": "Europa Infobox Theme",
+    "feature-wgEnableMediaGalleryExt": "new galleries",
+    "feature-wgEnableChat": "chat",
+    "feature-wgDisableAnonymousEditing": "the account requirement"
 }
