--- a/formats/logger/i18n/ru.json
+++ b/formats/logger/i18n/ru.json
@@ -4,9 +4,9 @@
     "edit-reply": "{{user|$1}} отредактировал ответ в {{link|Thread:$2|$3}} в теме {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
     "new": "{{user|$1}} создал страницу {{link|$2}} {{diffSize|$3}} {{summary|$4}}",
     "new-post": "{{user|$1}} создал обсуждение {{link|Thread:$2|$3}} в теме {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
-    "new-reply": "{{user|$1}} replied to {{link|Thread:$2|$3}} в теме {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
+    "new-reply": "{{user|$1}} ответил на {{link|Thread:$2|$3}} в теме {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
     "threadclose": "{{user|$1}} закрыл обсуждение {{link|$2|$3}} в теме {{board|$4|$5}} {{summary|$6}}",
-    "threadreopen": "{{user|$1}} reopened {{link|Thread:$2|$3}} on {{board|$4|$5}} {{summary|$6}}",
+    "threadreopen": "{{user|$1}} переоткрыл обсуждение {{link|Thread:$2|$3}} в теме {{board|$4|$5}} {{summary|$6}}",
     "threadremove": "{{user|$1}} убрал обсуждение {{link|$2|$3}} из темы {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} удалил обсуждение {{link|$2|$3}} в теме {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} восстановил обсуждение {{link|$2|$3}} в теме {{board|$4|$5}} {{summary|$6}}",
@@ -16,7 +16,7 @@
     "protect": "{{user|$1}} защитил страницу {{link|$2}} на $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} изменил защиту страницы {{link|$2}} на $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} снял защиту со страницы {{link|$2}} {{summary|$3}}",
-    "moveprotect": "{{user|$1}} moved protection from $2 to {{link|$3}} {{summary|$4}}",
+    "moveprotect": "{{user|$1}} переместил защиту с $2 на {{link|$3}} {{summary|$4}}",
     "rights": "{{user|$1}} изменил права участника для {{user|$2}} с $3 до $4 {{summary|$5}}",
     "delete": "{{user|$1}} удалил страницу $2 {{summary|$3}}",
     "restore": "{{user|$1}} восстановил правки на странице {{link|$2}} {{summary|$3}}",
@@ -31,7 +31,7 @@
     "remavatar": "{{user|$1}} убрал аватар участника {{user|$2}}",
     "abusefilter": "{{user|$1}} улучшил фильтр злоупотребления ID $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
     "newusers": "{{user|$1}} создал аккаунт",
-    "wikifeatures": "{{user|$1}} has $2 the $3 wiki feature",
+    "wikifeatures": "{{user|$1}} $2 $3",
     "chatbanadd": "{{user|$1}} забанил {{user|$2}} в чате на $3 {{summary|$4}}",
     "chatbanchange": "{{user|$1}} изменил бан {{user|$2}} в чате на $3 {{summary|$4}}",
     "chatbanremove": "{{user|$1}} снял бан в чате с {{user|$2}} {{summary|$3}}",
@@ -40,24 +40,24 @@
     "diff": "изм",
     "talk": "обс",
     "contribs": "вкл",
-    "rights-none": "(none)",
-    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) in $7 {{summary|$8}}",
-    "discussions-reply": "a reply",
-    "discussions-create-post": "posted",
-    "discussions-create-report": "reported",
-    "discussions-deleted": "deleted",
-    "discussions-un-deleted": "undeleted",
-    "discussions-modified": "edited",
-    "discussions-moved": "moved",
-    "feature-enable": "enabled",
-    "feature-disable": "disabled",
-    "feature-wgEnableAjaxPollExt": "polls",
-    "feature-wgEnableBlogArticles": "blogs",
-    "feature-wgEnableArticleCommentsExt": "article comments",
-    "feature-wgEnableCategoryExhibitionExt": "category exhibition",
-    "feature-wgEnableWallExt": "Message Walls",
-    "feature-wgEnablePortableInfoboxEuropaTheme": "Europa Infobox Theme",
-    "feature-wgEnableMediaGalleryExt": "new galleries",
-    "feature-wgEnableChat": "chat",
-    "feature-wgDisableAnonymousEditing": "the account requirement"
+    "rights-none": "(нет)",
+    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) в $7 {{summary|$8}}",
+    "discussions-reply": "ответ",
+    "discussions-create-post": "опубликовал",
+    "discussions-create-report": "пожаловался на",
+    "discussions-deleted": "удалил",
+    "discussions-un-deleted": "восстановил",
+    "discussions-modified": "отредактировал",
+    "discussions-moved": "переместил",
+    "feature-enable": "подключил",
+    "feature-disable": "отключил",
+    "feature-wgEnableAjaxPollExt": "голосования",
+    "feature-wgEnableBlogArticles": "блоги",
+    "feature-wgEnableArticleCommentsExt": "комментарии к статьям",
+    "feature-wgEnableCategoryExhibitionExt": "категории-галереи",
+    "feature-wgEnableWallExt": "стены обсуждений",
+    "feature-wgEnablePortableInfoboxEuropaTheme": "тему для инфобоксов «Europa»",
+    "feature-wgEnableMediaGalleryExt": "новые галереи изображений",
+    "feature-wgEnableChat": "чат",
+    "feature-wgDisableAnonymousEditing": "обязательную регистрацию участников"
 }
