--- a/formats/logger/i18n/es.json
+++ b/formats/logger/i18n/es.json
@@ -4,9 +4,9 @@
     "edit-reply": "{{user|$1}} editó la respuesta en {{link|Thread:$2|$3}} en {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
     "new": "{{user|$1}} creó {{link|$2}} {{diffSize|$3}} {{summary|$4}}",
     "new-post": "{{user|$1}} dejó {{link|Thread:$2|$3}} en {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
-    "new-reply": "{{user|$1}} replied to {{link|Thread:$2|$3}} en {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
+    "new-reply": "{{user|$1}} respondió a {{link|Thread:$2|$3}} en {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
     "threadclose": "{{user|$1}} cerró {{link|$2|$3}} en {{board|$4|$5}} {{summary|$6}}",
-    "threadreopen": "{{user|$1}} reopened {{link|Thread:$2|$3}} on {{board|$4|$5}} {{summary|$6}}",
+    "threadreopen": "{{user|$1}} reabrió {{link|Thread:$2|$3}} en {{board|$4|$5}} {{summary|$6}}",
     "threadremove": "{{user|$1}} retiró {{link|$2|$3}} de {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} retiró {{link|$2|$3}} de {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} restauró {{link|$2|$3}} en {{board|$4|$5}} {{summary|$6}}",
@@ -16,22 +16,22 @@
     "protect": "{{user|$1}} protegió {{link|$2}} a $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} volvió a proteger {{link|$2}} a $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} desprotegió {{link|$2}} {{summary|$3}}",
-    "moveprotect": "{{user|$1}} moved protection from $2 to {{link|$3}} {{summary|$4}}",
+    "moveprotect": "{{user|$1}} movió la protección de $2 a {{link|$3}} {{summary|$4}}",
     "rights": "{{user|$1}} cambió los derechos para {{user|$2}} de $3 a $4 {{summary|$5}}",
     "delete": "{{user|$1}} eliminó $2 {{summary|$3}}",
     "restore": "{{user|$1}} restauró la revisión en {{link|$2}} {{summary|$3}}",
     "revdel": "{{user|$1}} eliminó la revisión $2 en $3 {{summary|$4}}",
-    "logdel": "{{user|$1}} tiene un evento del registro oculto $2 {{summary|$3}}",
+    "logdel": "{{user|$1}} ha ocultado un evento del registro $2 {{summary|$3}}",
     "upload": "{{user|$1}} subió {{link|$2|$3}} {{summary|$4}}",
     "reupload": "{{user|$1}} resubió {{link|$2|$3}} {{summary|$4}}",
     "move": "{{user|$1}} renombró $2 a {{link|$3}} {{summary|$4}}",
     "moveredir": "{{user|$1}} renombró $2 a {{link|$3}} en una redirección {{summary|$4}}",
     "merge": "{{user|$1}} fusionó los historiales de $2 y {{link|$3}} {{summary|$4}}",
-    "avatar": "{{user|$1}} cambió de avatar",
-    "remavatar": "{{user|$1}} removió el avatar de {{user|$2}}",
-    "abusefilter": "{{user|$1}} modificó el filtro de abusos ID $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
+    "avatar": "{{user|$1}} cambió su avatar",
+    "remavatar": "{{user|$1}} quitó el avatar de {{user|$2}}",
+    "abusefilter": "{{user|$1}} modificó el filtro de abusos con ID $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
     "newusers": "{{user|$1}} creó una nueva cuenta",
-    "wikifeatures": "{{user|$1}} has $2 the $3 wiki feature",
+    "wikifeatures": "{{user|$1}} $2 $3 en la wiki",
     "chatbanadd": "{{user|$1}} baneó a {{user|$2}} del chat por $3 {{summary|$4}}",
     "chatbanchange": "{{user|$1}} cambió el baneo del chat de {{user|$2}} a $3 {{summary|$4}}",
     "chatbanremove": "{{user|$1}} ha terminado el baneo del chat de {{user|$2}} {{summary|$3}}",
@@ -40,24 +40,24 @@
     "diff": "diff",
     "talk": "d",
     "contribs": "c",
-    "rights-none": "(none)",
-    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) in $7 {{summary|$8}}",
-    "discussions-reply": "a reply",
-    "discussions-create-post": "posted",
-    "discussions-create-report": "reported",
-    "discussions-deleted": "deleted",
-    "discussions-un-deleted": "undeleted",
-    "discussions-modified": "edited",
-    "discussions-moved": "moved",
-    "feature-enable": "enabled",
-    "feature-disable": "disabled",
-    "feature-wgEnableAjaxPollExt": "polls",
-    "feature-wgEnableBlogArticles": "blogs",
-    "feature-wgEnableArticleCommentsExt": "article comments",
-    "feature-wgEnableCategoryExhibitionExt": "category exhibition",
-    "feature-wgEnableWallExt": "Message Walls",
-    "feature-wgEnablePortableInfoboxEuropaTheme": "Europa Infobox Theme",
-    "feature-wgEnableMediaGalleryExt": "new galleries",
-    "feature-wgEnableChat": "chat",
-    "feature-wgDisableAnonymousEditing": "the account requirement"
+    "rights-none": "(ninguno)",
+    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) en $7 {{summary|$8}}",
+    "discussions-reply": "una respuesta",
+    "discussions-create-post": "posteado",
+    "discussions-create-report": "reportado",
+    "discussions-deleted": "eliminado",
+    "discussions-un-deleted": "restaurado",
+    "discussions-modified": "editado",
+    "discussions-moved": "movido",
+    "feature-enable": "habilitó",
+    "feature-disable": "deshabilitó",
+    "feature-wgEnableAjaxPollExt": "las encuestas",
+    "feature-wgEnableBlogArticles": "los blogs",
+    "feature-wgEnableArticleCommentsExt": "los comentarios en artículos",
+    "feature-wgEnableCategoryExhibitionExt": "la exhibición de categorías",
+    "feature-wgEnableWallExt": "los Muros",
+    "feature-wgEnablePortableInfoboxEuropaTheme": "las Fichas con el Tema Europa",
+    "feature-wgEnableMediaGalleryExt": "las galerías nuevas",
+    "feature-wgEnableChat": "el chat",
+    "feature-wgDisableAnonymousEditing": "el requerimiento de una cuenta"
 }
