Less large commit for the god of less large commits

--- a/formats/logger/i18n/be.json
+++ b/formats/logger/i18n/be.json
@@ -10,9 +10,9 @@
     "threadremove": "{{user|$1}} прыбраў абмеркаванне {{link|$2|$3}} з тэмы {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} выдаліў абмеркаванне {{link|$2|$3}} у тэме {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} аднавіў абмеркаванне {{link|$2|$3}} у тэме {{board|$4|$5}} {{summary|$6}}",
-    "block": "{{user|$1}} заблакаваў {{user|$2}} на $3 [$4] {{summary|$5}}",
+    "block": "{{user|$1}} заблакаваў {{user|$2}} на $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} разблакаваў {{user|$2}} {{summary|$3}}",
-    "reblock": "{{user|$1}} змяніў блакаванне для {{user|$2}} на $3 [$4] {{summary|$5}}",
+    "reblock": "{{user|$1}} змяніў блакаванне для {{user|$2}} на $3 {{flags|$4}}{{summary|$5}}",
     "protect": "{{user|$1}} абараніў старонку {{link|$2}} на $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} змяніў абарону старонкі {{link|$2}} на $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} зняў абарону са старонкі {{link|$2}} {{summary|$3}}",
