--- a/formats/logger/i18n/es.json
+++ b/formats/logger/i18n/es.json
@@ -10,9 +10,9 @@
     "threadremove": "{{user|$1}} retiró {{link|$2|$3}} de {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} retiró {{link|$2|$3}} de {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} restauró {{link|$2|$3}} en {{board|$4|$5}} {{summary|$6}}",
-    "block": "{{user|$1}} bloqueó a {{user|$2}} por $3 [$4] {{summary|$5}}",
+    "block": "{{user|$1}} bloqueó a {{user|$2}} por $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} desbloqueó a {{user|$2}} {{summary|$3}}",
-    "reblock": "{{user|$1}} cambió el bloqueo para {{user|$2}} por $3 [$4] {{summary|$5}}",
+    "reblock": "{{user|$1}} cambió el bloqueo para {{user|$2}} por $3 {{flags|$4}}{{summary|$5}}",
     "protect": "{{user|$1}} protegió {{link|$2}} a $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} volvió a proteger {{link|$2}} a $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} desprotegió {{link|$2}} {{summary|$3}}",
