--- a/formats/logger/i18n/fr.json
+++ b/formats/logger/i18n/fr.json
@@ -10,9 +10,9 @@
     "threadremove": "{{user|$1}} a retiré {{link|$2|$3}} sur {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} a supprimé {{link|$2|$3}} de {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} a restauré {{link|$2|$3}} sur {{board|$4|$5}} {{summary|$6}}",
-    "block": "{{user|$1}} a bloqué {{user|$2}} pour $3 [$4] {{summary|$5}}",
+    "block": "{{user|$1}} a bloqué {{user|$2}} pour $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} a débloqué {{user|$2}} {{summary|$3}}",
-    "reblock": "{{user|$1}} a modifié le blocage pour {{user|$2}} à $3 [$4] {{summary|$5}}",
+    "reblock": "{{user|$1}} a modifié le blocage pour {{user|$2}} à $3 {{flags|$4}}{{summary|$5}}",
     "protect": "{{user|$1}} a protégé {{link|$2}} pour $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} a reprotégé {{link|$2}} pour $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} a déprotégé {{link|$2}} {{summary|$3}}",
