--- a/formats/logger/i18n/pl.json
+++ b/formats/logger/i18n/pl.json
@@ -10,9 +10,9 @@
     "threadremove": "{{user|$1}} usunął {{link|$2|$3}} z {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} skasował {{link|$2|$3}} z {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} odtworzył {{link|$2|$3}} do {{board|$4|$5}} {{summary|$6}}",
-    "block": "{{user|$1}} zablokował {{user|$2}} na $3 [$4] {{summary|$5}}",
+    "block": "{{user|$1}} zablokował {{user|$2}} na $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} odblokował {{user|$2}} {{summary|$3}}",
-    "reblock": "{{user|$1}} zmienił blokadę dla {{user|$2}} na $3 [$4] {{summary|$5}}",
+    "reblock": "{{user|$1}} zmienił blokadę dla {{user|$2}} na $3 {{flags|$4}}{{summary|$5}}",
     "protect": "{{user|$1}} zabezpieczył {{link|$2}} na $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} zmienił zabezpieczenie dla {{link|$2}} na $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} odbezpieczył {{link|$2}} {{summary|$3}}",
