--- a/formats/logger/i18n/uk.json
+++ b/formats/logger/i18n/uk.json
@@ -10,9 +10,9 @@
     "threadremove": "{{user|$1}} прибрав обговорення {{link|$2|$3}} з теми {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} видалив обговорення {{link|$2|$3}} в темі {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} відновив обговорення {{link|$2|$3}} в темі {{board|$4|$5}} {{summary|$6}}",
-    "block": "{{user|$1}} заблокував {{user|$2}} на $3 [$4] {{summary|$5}}",
+    "block": "{{user|$1}} заблокував {{user|$2}} на $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} розблокував {{user|$2}} {{summary|$3}}",
-    "reblock": "{{user|$1}} змінив блокування для {{user|$2}} на $3 [$4] {{summary|$5}}",
+    "reblock": "{{user|$1}} змінив блокування для {{user|$2}} на $3 {{flags|$4}}{{summary|$5}}",
     "protect": "{{user|$1}} захистив сторінку {{link|$2}} на $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} змінив захист сторінки {{link|$2}} на $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} зняв захист із сторінки {{link|$2}} {{summary|$3}}",
