--- a/formats/logger/i18n/de.json
+++ b/formats/logger/i18n/de.json
@@ -10,9 +10,9 @@
     "threadremove": "{{user|$1}} entfernt {{link|$2|$3}} vom {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} gelöscht {{link|$2|$3}} vom {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} restored {{link|$2|$3}} zu {{board|$4|$5}} {{summary|$6}}",
-    "block": "{{user|$1}} gesperrt {{user|$2}} für $3 [$4] {{summary|$5}}",
+    "block": "{{user|$1}} gesperrt {{user|$2}} für $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} entsperrt {{user|$2}} {{summary|$3}}",
-    "reblock": "{{user|$1}} blockiert geändert für {{user|$2}} zu $3 [$4] {{summary|$5}}",
+    "reblock": "{{user|$1}} blockiert geändert für {{user|$2}} zu $3 {{flags|$4}}{{summary|$5}}",
     "protect": "{{user|$1}} geschützt {{link|$2}} zu $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} geschützt {{link|$2}} zu $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} ungeschützt {{link|$2}} {{summary|$3}}",
