--- a/formats/logger/i18n/en.json
+++ b/formats/logger/i18n/en.json
@@ -10,9 +10,9 @@
     "threadremove": "{{user|$1}} removed {{link|Thread:$2|$3}} from {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} deleted {{link|Thread:$2|$3}} from {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} restored {{link|Thread:$2|$3}} to {{board|$4|$5}} {{summary|$6}}",
-    "block": "{{user|$1}} blocked {{user|$2}} for $3 [$4] {{summary|$5}}",
+    "block": "{{user|$1}} blocked {{user|$2}} for $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} unblocked {{user|$2}} {{summary|$3}}",
-    "reblock": "{{user|$1}} changed block for {{user|$2}} to $3 [$4] {{summary|$5}}",
+    "reblock": "{{user|$1}} changed block for {{user|$2}} to $3 {{flags|$4}}{{summary|$5}}",
     "protect": "{{user|$1}} protected {{link|$2}} to $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} reprotected {{link|$2}} to $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} unprotected {{link|$2}} {{summary|$3}}",
@@ -21,7 +21,7 @@
     "delete": "{{user|$1}} deleted $2 {{summary|$3}}",
     "restore": "{{user|$1}} restored revisions on {{link|$2}} {{summary|$3}}",
     "revdel": "{{user|$1}} deleted revisions on {{link|$2}} {{summary|$3}}",
-    "logdel": "{{user|$1}} has hidden log event on {{link|$2}} {{summary|$3}}",
+    "logdel": "{{user|$1}} has hidden a log event on {{link|$2}} {{summary|$3}}",
     "upload": "{{user|$1}} uploaded {{link|$2|$3}} {{summary|$4}}",
     "reupload": "{{user|$1}} reuploaded {{link|$2|$3}} {{summary|$4}}",
     "move": "{{user|$1}} moved $2 to {{link|$3}} {{summary|$4}}",
