--- a/formats/logger/i18n/pt-br.json
+++ b/formats/logger/i18n/pt-br.json
@@ -10,9 +10,9 @@
     "threadremove": "{{user|$1}} removeu {{link|$2|$3}} do {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} deletou {{link|$2|$3}} do {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} restaurou {{link|$2|$3}} no {{board|$4|$5}} {{summary|$6}}",
-    "block": "{{user|$1}} bloqueou {{user|$2}} por $3 [$4] {{summary|$5}}",
+    "block": "{{user|$1}} bloqueou {{user|$2}} por $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} desbloqueou {{user|$2}} {{summary|$3}}",
-    "reblock": "{{user|$1}} alterou bloqueio de {{user|$2}} para $3 [$4] {{summary|$5}}",
+    "reblock": "{{user|$1}} alterou bloqueio de {{user|$2}} para $3 {{flags|$4}}{{summary|$5}}",
     "protect": "{{user|$1}} protegeu {{link|$2}} para $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} alterou proteção de {{link|$2}} para $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} removeu proteção de {{link|$2}} {{summary|$3}}",
