--- a/formats/logger/i18n/ru.json
+++ b/formats/logger/i18n/ru.json
@@ -10,9 +10,9 @@
     "threadremove": "{{user|$1}} убрал обсуждение {{link|$2|$3}} из темы {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} удалил обсуждение {{link|$2|$3}} в теме {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} восстановил обсуждение {{link|$2|$3}} в теме {{board|$4|$5}} {{summary|$6}}",
-    "block": "{{user|$1}} заблокировал {{user|$2}} на $3 [$4] {{summary|$5}}",
+    "block": "{{user|$1}} заблокировал {{user|$2}} на $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} разблокировал {{user|$2}} {{summary|$3}}",
-    "reblock": "{{user|$1}} изменил блокировку для {{user|$2}} на $3 [$4] {{summary|$5}}",
+    "reblock": "{{user|$1}} изменил блокировку для {{user|$2}} на $3 {{flags|$4}}{{summary|$5}}",
     "protect": "{{user|$1}} защитил страницу {{link|$2}} на $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} изменил защиту страницы {{link|$2}} на $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} снял защиту со страницы {{link|$2}} {{summary|$3}}",
