--- a/formats/logger/i18n/fr.json
+++ b/formats/logger/i18n/fr.json
@@ -4,9 +4,9 @@
     "edit-reply": "{{user|$1}} a modifié la réponse sur {{link|Thread:$2|$3}} sur {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
     "new": "{{user|$1}} a créé {{link|$2}} {{diffSize|$3}} {{summary|$4}}",
     "new-post": "{{user|$1}} a posté {{link|Thread:$2|$3}} sur {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
-    "new-reply": "{{user|$1}} replied to {{link|Thread:$2|$3}} sur {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
+    "new-reply": "{{user|$1}} a répondu à {{link|Thread:$2|$3}} sur {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
     "threadclose": "{{user|$1}} a fermé {{link|$2|$3}} sur {{board|$4|$5}} {{summary|$6}}",
-    "threadreopen": "{{user|$1}} reopened {{link|Thread:$2|$3}} on {{board|$4|$5}} {{summary|$6}}",
+    "threadreopen": "{{user|$1}} a réouvert {{link|Thread:$2|$3}} sur {{board|$4|$5}} {{summary|$6}}",
     "threadremove": "{{user|$1}} a retiré {{link|$2|$3}} sur {{board|$4|$5}} {{summary|$6}}",
     "threaddelete": "{{user|$1}} a supprimé {{link|$2|$3}} de {{board|$4|$5}} {{summary|$6}}",
     "threadrestore": "{{user|$1}} a restauré {{link|$2|$3}} sur {{board|$4|$5}} {{summary|$6}}",
@@ -16,7 +16,7 @@
     "protect": "{{user|$1}} a protégé {{link|$2}} pour $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} a reprotégé {{link|$2}} pour $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} a déprotégé {{link|$2}} {{summary|$3}}",
-    "moveprotect": "{{user|$1}} moved protection from $2 to {{link|$3}} {{summary|$4}}",
+    "moveprotect": "{{user|$1}} a déplacé la protection de $2 à {{link|$3}} {{summary|$4}}",
     "rights": "{{user|$1}} a modifié les droits utilisateurs {{user|$2}} de $3 à $4 {{summary|$5}}",
     "delete": "{{user|$1}} a supprimé $2 {{summary|$3}}",
     "restore": "{{user|$1}} a restauré les révisions de {{link|$2}} {{summary|$3}}",
@@ -31,7 +31,7 @@
     "remavatar": "{{user|$1}} a supprimé l'avatar de {{user|$2}}",
     "abusefilter": "{{user|$1}} a modifié le filtre anti-abus nº $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
     "newusers": "{{user|$1}} a créé un compte",
-    "wikifeatures": "{{user|$1}} has $2 the $3 wiki feature",
+    "wikifeatures": "{{user|$1}} a $2 la fonctionnalité de $3 wiki",
     "chatbanadd": "{{user|$1}} a banni {{user|$2}} du tchat pour $3 {{summary|$4}}",
     "chatbanchange": "{{user|$1}} a modifié le bannissement du tchat pour {{user|$2}} à $3 {{summary|$4}}",
     "chatbanremove": "{{user|$1}} a retiré le banissement du tchat pour {{user|$2}} {{summary|$3}}",
@@ -40,24 +40,24 @@
     "diff": "diff",
     "talk": "discuter",
     "contribs": "contributions",
-    "rights-none": "(none)",
-    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) in $7 {{summary|$8}}",
-    "discussions-reply": "a reply",
-    "discussions-create-post": "posted",
-    "discussions-create-report": "reported",
-    "discussions-deleted": "deleted",
-    "discussions-un-deleted": "undeleted",
-    "discussions-modified": "edited",
-    "discussions-moved": "moved",
-    "feature-enable": "enabled",
-    "feature-disable": "disabled",
-    "feature-wgEnableAjaxPollExt": "polls",
-    "feature-wgEnableBlogArticles": "blogs",
-    "feature-wgEnableArticleCommentsExt": "article comments",
-    "feature-wgEnableCategoryExhibitionExt": "category exhibition",
-    "feature-wgEnableWallExt": "Message Walls",
-    "feature-wgEnablePortableInfoboxEuropaTheme": "Europa Infobox Theme",
-    "feature-wgEnableMediaGalleryExt": "new galleries",
-    "feature-wgEnableChat": "chat",
-    "feature-wgDisableAnonymousEditing": "the account requirement"
+    "rights-none": "(aucun)",
+    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) dans $7 {{summary|$8}}",
+    "discussions-reply": "une réponse",
+    "discussions-create-post": "posté",
+    "discussions-create-report": "reporté",
+    "discussions-deleted": "supprimé",
+    "discussions-un-deleted": "restauré",
+    "discussions-modified": "modifié",
+    "discussions-moved": "déplacé",
+    "feature-enable": "activé",
+    "feature-disable": "désactivé",
+    "feature-wgEnableAjaxPollExt": "Sondages",
+    "feature-wgEnableBlogArticles": "Blogs",
+    "feature-wgEnableArticleCommentsExt": "Commentaires sur les articles",
+    "feature-wgEnableCategoryExhibitionExt": "Exposition de catégorie",
+    "feature-wgEnableWallExt": "Murs de discussion",
+    "feature-wgEnablePortableInfoboxEuropaTheme": "Thème d'infobox Europa",
+    "feature-wgEnableMediaGalleryExt": "Nouvelles galeries d'images",
+    "feature-wgEnableChat": "Tchat",
+    "feature-wgDisableAnonymousEditing": "Demander à tous les éditeurs de se connecter"
 }
