GitHub community file maintenance, fix for parsing AF and ProtectSite summaries; wikia -> fandom; http -> https; catch errors in setIntervals; CTCP VERSION; update packages

--- a/formats/logger/i18n/qqq.json
+++ b/formats/logger/i18n/qqq.json
@@ -51,13 +51,13 @@
     "discussions-moved": "When a Discussions post is moved",
     "feature-enable": "When a wiki feature is enabled",
     "feature-disable": "When a wiki feature is disabled",
-    "feature-wgEnableAjaxPollExt": "The [Polls feature](https://c.wikia.com/wiki/Help:Polls)",
-    "feature-wgEnableBlogArticles": "The [blogs feature](https://c.wikia.com/wiki/Help:Blogs)",
-    "feature-wgEnableArticleCommentsExt": "The [article comments feature](https://c.wikia.com/wiki/Help:Comments)",
-    "feature-wgEnableCategoryExhibitionExt": "The [category exhibition feature](https://c.wikia.com/wiki/Help:Category_Exhibition)",
-    "feature-wgEnableWallExt": "The [Message Wall feature](https://c.wikia.com/wiki/Help:Message_Walls)",
-    "feature-wgEnablePortableInfoboxEuropaTheme": "The [Europa Infobox Theme](https://c.wikia.com/wiki/Help:Europa_Infobox_Theme)",
-    "feature-wgEnableMediaGalleryExt": "The [new galleries feature](https://c.wikia.com/wiki/Help:New_image_galleries)",
-    "feature-wgEnableChat": "The [chat feature](https://c.wikia.com/wiki/Help:Chat)",
+    "feature-wgEnableAjaxPollExt": "The [Polls feature](https://community.fandom.com/wiki/Help:Polls)",
+    "feature-wgEnableBlogArticles": "The [blogs feature](https://community.fandom.com/wiki/Help:Blogs)",
+    "feature-wgEnableArticleCommentsExt": "The [article comments feature](https://community.fandom.com/wiki/Help:Comments)",
+    "feature-wgEnableCategoryExhibitionExt": "The [category exhibition feature](https://community.fandom.com/wiki/Help:Category_Exhibition)",
+    "feature-wgEnableWallExt": "The [Message Wall feature](https://community.fandom.com/wiki/Help:Message_Walls)",
+    "feature-wgEnablePortableInfoboxEuropaTheme": "The [Europa Infobox Theme](https://community.fandom.com/wiki/Help:Europa_Infobox_Theme)",
+    "feature-wgEnableMediaGalleryExt": "The [new galleries feature](https://community.fandom.com/wiki/Help:New_image_galleries)",
+    "feature-wgEnableChat": "The [chat feature](https://community.fandom.com/wiki/Help:Chat)",
     "feature-wgDisableAnonymousEditing": "The account requirement feature"
 }
