--- a/formats/logger/i18n/tr.json
+++ b/formats/logger/i18n/tr.json
@@ -1,63 +1,63 @@
 {
-    "edit": "{{user|$1}}, {{link|$2}} düzenledi {{diffSize|$3}} {{diff|$4}} {{summary|$5}}",
-    "edit-post": "{{user|$1}}, {{board|$4|$5}} üzerinden {{link|Thread:$2|$3}} düzenledi {{diffSize|$6}} {{diff|$7}}",
-    "edit-reply": "{{user|$1}}, {{board|$4|$5}} üzerinden {{link|Thread:$2|$3}} yanıtını düzenledi {{diffSize|$6}} {{diff|$7}}",
-    "new": "{{user|$1}}, {{link|$2}} oluşturdu {{diffSize|$3}} {{summary|$4}}",
-    "new-post": "{{user|$1}}, {{board|$4|$5}} üzerinden {{link|Thread:$2|$3}} gönderdi {{diffSize|$6}} {{summary|$7}}",
-    "new-reply": "{{user|$1}}, {{board|$4|$5}} üzerinden {{link|Thread:$2|$3}} yanıtladı {{diffSize|$6}} {{summary|$7}}",
-    "threadclose": "{{user|$1}}, {{board|$4|$5}} üzerinden {{link|Thread:$2|$3}} kapatıldı {{summary|$6}}",
-    "threadreopen": "{{user|$1}}, {{board|$4|$5}} üzerinden {{link|Thread:$2|$3}} yeniden açtı{{summary|$6}}",
-    "threadremove": "{{user|$1}}, {{board|$4|$5}} üzerinden {{link|Thread:$2|$3}} kaldırdı {{summary|$6}}",
-    "threaddelete": "{{user|$1}}, {{board|$4|$5}} üzerinden {{link|Thread:$2|$3}} sildin {{summary|$6}}",
-    "threadrestore": "{{user|$1}}, {{board|$4|$5}} üzerinden {{link|Thread:$2|$3}} yeniden getirdi {{summary|$6}}",
-    "block": "{{user|$1}}, {{user|$2}} kullanıcısı $3 engelledi {{flags|$4}}{{summary|$5}}",
-    "unblock": "{{user|$1}}, {{user|$2}} engeli kaldırdı {{summary|$3}}",
-    "reblock": "{{user|$1}}, {{user|$2}} engelini $3 değiştirdi {{flags|$4}}{{summary|$5}}",
-    "protect": "{{user|$1}}, {{link|$2}} koruma altına aldı $3 {{summary|$4}}",
-    "reprotect": "{{user|$1}}, {{link|$2}} yeniden korumaya aldı $3 {{summary|$4}}",
-    "unprotect": "{{user|$1}}, {{link|$2}} korumayı kaldırdı {{summary|$3}}",
-    "moveprotect": "{{user|$1}}, {{link|$3}} sayfasının koruması $2 olarak taşıdı  {{summary|$4}}",
-    "rights": "{{user|$1}}, {{user|$2}} kullanıcısı hakları $3 olarak $4 değiştirdi {{summary|$5}}",
-    "delete": "{{user|$1}}, $2 sildi {{summary|$3}}",
-    "restore": "{{user|$1}}, {{link|$2}} üzerinde revizyonları geri getirdi {{summary|$3}}",
-    "revdel": "{{user|$1}}, {{link|$2}} üzerinde revizyonları sildi {{summary|$3}}",
-    "logdel": "{{user|$1}}, {{link|$2}} üzerinde bir günlük olayını gizledi {{summary|$3}}",
-    "upload": "{{user|$1}}, {{link|$2|$3}} yükledi {{summary|$4}}",
-    "reupload": "{{user|$1}}, {{link|$2|$3}} tekrar yükledi {{summary|$4}}",
-    "move": "{{user|$1}}, $2 sayfasını {{link|$3}} taşıdı {{summary|$4}}",
-    "moveredir": "{{user|$1}}, $2 sayfasını {{link|$3}} yönlendirme olarak taşıdı {{summary|$4}}",
-    "merge": "{{user|$1}}, $2 ve {{link|$3}} geçmişleri birleştir {{summary|$4}}",
-    "avatar": "{{user|$1}} avatarı değiştirdi",
-    "remavatar": "{{user|$1}}, {{user|$2}} avatarını kaldırdı",
-    "abusefilter": "{{user|$1}} kötüye kullanım filtresi kimliği değiştirdi $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|fark}}]",
-    "newusers": "{{user|$1}} hesap oluşturdu",
-    "wikifeatures": "{{user|$1}}, $2 adlı $3 wiki özellik var",
-    "chatbanadd": "{{user|$1}}, {{user|$2}} kullanıcısı sohbetten $3 yasaklandı {{summary|$4}}",
-    "chatbanchange": "{{user|$1}}, {{user|$2}} kullanıcısı sohbet $3 olarak değiştirdi {{summary|$4}}",
-    "chatbanremove": "{{user|$1}}, {{user|$2}} kullanıcı için sohbet yatağı bitirdi{{summary|$3}}",
-    "board-1201": "$1 duvarı",
-    "board-2001": "$1 panosu",
+    "edit": "{{link|$2}} sayfası {{user|$1}} tarafından düzenlendi {{diffSize|$3}} {{diff|$4}} {{summary|$5}}",
+    "edit-post": "{{board|$4|$5}} konumundaki {{link|Thread:$2|$3}} sayfası {{user|$1}} tarafından düzenlendi {{diffSize|$6}} {{diff|$7}}",
+    "edit-reply": "{{user|$1}} kullanıcısının {{board|$4|$5}} konumundaki {{link|Thread:$2|$3}} başlığına cevabı düzenlendi {{diffSize|$6}} {{diff|$7}}",
+    "new": "{{link|$2}} sayfası {{user|$1}} tarafından oluşturuldu {{diffSize|$3}} {{summary|$4}}",
+    "new-post": "{{link|Thread:$2|$3}} başlığı {{user|$1}} tarafından {{board|$4|$5}} konumunda paylaşıldı {{diffSize|$6}} {{summary|$7}}",
+    "new-reply": "{{board|$4|$5}} konumundaki {{link|Thread:$2|$3}} başlığına {{user|$1}} tarafından yanıt verildi {{diffSize|$6}} {{summary|$7}}",
+    "threadclose": "{{board|$4|$5}} konumundaki {{link|Thread:$2|$3}} başlığı {{user|$1}} tarafından kapatıldı {{summary|$6}}",
+    "threadreopen": "{{board|$4|$5}} konumundaki {{link|Thread:$2|$3}} başlığı {{user|$1}} tarafından tekrar açıldı {{summary|$6}}",
+    "threadremove": "{{board|$4|$5}} konumundaki {{link|Thread:$2|$3}} başlığı {{user|$1}} tarafından kaldırıldı {{summary|$6}}",
+    "threaddelete": "{{board|$4|$5}} konumundaki {{link|Thread:$2|$3}} başlığı {{user|$1}} tarafından silindi {{summary|$6}}",
+    "threadrestore": "{{board|$4|$5}} konumundaki {{link|Thread:$2|$3}} başlığı {{user|$1}} tarafından geri eklendi {{summary|$6}}",
+    "block": "{{user|$2}}, $3 nedeniyle {{user|$1}} tarafından engellendi {{flags|$4}}{{summary|$5}}",
+    "unblock": "{{user|$2}} kullanıcısının engeli {{user|$1}} tarafından kaldırıldı {{summary|$3}}",
+    "reblock": "{{user|$2}} kullanıcısının engel nedenini {{user|$1}} tarafından $3 ile değiştirildi {{flags|$4}}{{summary|$5}}",
+    "protect": "{{link|$2}} sayfası {{user|$1}} tarafından $3 kuralları ile korundu {{summary|$4}}",
+    "reprotect": "{{link|$2}} sayfası {{user|$1}} tarafından $3 kuralları ile tekrar korundu {{summary|$4}}",
+    "unprotect": "{{link|$2}} sayfasının koruması {{user|$1}} tarafından kaldırıldı {{summary|$3}}",
+    "moveprotect": "Koruma kuralı $2, {{user|$1}} tarafından {{link|$3}} sayfasına taşındı {{summary|$4}}",
+    "rights": "{{user|$2}} kullanıcısının $3 hakları {{user|$1}} tarafından $4 ile değiştirildi {{summary|$5}}",
+    "delete": "$2, {{user|$1}} tarafından silindi {{summary|$3}}",
+    "restore": "{{link|$2}} sayfasının revizelerini {{user|$1}} tarafından geri eklendi {{summary|$3}}",
+    "revdel": "{{link|$2}} sayfasının revizelerini {{user|$1}} tarafından sildi {{summary|$3}}",
+    "logdel": "{{user|$1}}, {{link|$2}} sayfasında gizli bir log aktivitesine sahip {{summary|$3}}",
+    "upload": "{{link|$2|$3}}, {{user|$1}} tarafından yüklendi {{summary|$4}}",
+    "reupload": "{{link|$2|$3}}, {{user|$1}} tarafından yeniden yüklendi {{summary|$4}}",
+    "move": "$2, {{user|$1}} tarafından {{link|$3}} sayfasına taşındı {{summary|$4}}",
+    "moveredir": "$2, {{user|$1}} tarafından bir yönlendirme üzerinden {{link|$3}} sayfasına taşındı {{summary|$4}}",
+    "merge": "$2 ve {{link|$3}} sayfalarının geçmişleri {{user|$1}} tarafından birleştirildi {{summary|$4}}",
+    "avatar": "{{user|$1}} avatarını değiştirdi",
+    "remavatar": "{{user|$2}} kullanıcısının avatarı {{user|$1}} tarafından kaldırıldı",
+    "abusefilter": "Suistimal filtresi ID'si $2, {{user|$1}} tarafından düzenlendi [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
+    "newusers": "{{user|$1}} hesabı oluşturuldu",
+    "wikifeatures": "Wiki özelliği $3, {{user|$1}} tarafından $2",
+    "chatbanadd": "{{user|$2}} kullanıcısı $3 nedeniyle {{user|$1}} tarafından sohbetten engellendi {{summary|$4}}",
+    "chatbanchange": "{{user|$2}} kullanıcısının engel nedeni {{user|$1}} tarafından $3 ile değiştirildi {{summary|$4}}",
+    "chatbanremove": "{{user|$2}} kullanıcısının sohbet engeli {{user|$1}} tarafından bitirildi {{summary|$3}}",
+    "board-1201": "$1 kullanıcısının duvarı",
+    "board-2001": "$1 kullanıcısının panosu",
     "diff": "fark",
     "talk": "t",
     "contribs": "k",
-    "rights-none": "(hiçbiri)",
-    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) içinde $7 {{summary|$8}}",
-    "discussions-reply": "bir yanıt",
-    "discussions-create-post": "gönderdi",
-    "discussions-create-report": "yeniden açtı",
-    "discussions-deleted": "sildi",
-    "discussions-un-deleted": "silmeyi geri aldı",
+    "rights-none": "(yok)",
+    "discussions": "{{user|$1}} tarafından $7 kategorisine $2 tartışması {{dlink|$3|$4|$5}} eklendi {{summary|$8}}",
+    "discussions-reply": "yanıt",
+    "discussions-create-post": "paylaşıldı",
+    "discussions-create-report": "rapor edildi",
+    "discussions-deleted": "silindi",
+    "discussions-un-deleted": "silme geri alındı",
     "discussions-modified": "düzenlendi",
     "discussions-moved": "taşındı",
-    "feature-enable": "etkinleştirdi",
-    "feature-disable": "devre dışı bırakıldı",
+    "feature-enable": "etkinleştirildi",
+    "feature-disable": "etkisizleştirildi",
     "feature-wgEnableAjaxPollExt": "anketler",
-    "feature-wgEnableBlogArticles": "bloglar",
+    "feature-wgEnableBlogArticles": "web günlükleri",
     "feature-wgEnableArticleCommentsExt": "makale yorumları",
-    "feature-wgEnableCategoryExhibitionExt": "kategori sergisi",
+    "feature-wgEnableCategoryExhibitionExt": "kategori serisi",
     "feature-wgEnableWallExt": "Mesaj Duvarları",
     "feature-wgEnablePortableInfoboxEuropaTheme": "Europa Bilgi Kutusu Teması",
     "feature-wgEnableMediaGalleryExt": "yeni galeriler",
     "feature-wgEnableChat": "sohbet",
-    "feature-wgDisableAnonymousEditing": "hesap şartı"
+    "feature-wgDisableAnonymousEditing": "hesap gerekliliği"
 }
