--- a/formats/logger/i18n/tr.json
+++ b/formats/logger/i18n/tr.json
@@ -10,7 +10,7 @@
     "threadremove": "{{board|$4|$5}} konumundaki {{link|Thread:$2|$3}} başlığı {{user|$1}} tarafından kaldırıldı {{summary|$6}}",
     "threaddelete": "{{board|$4|$5}} konumundaki {{link|Thread:$2|$3}} başlığı {{user|$1}} tarafından silindi {{summary|$6}}",
     "threadrestore": "{{board|$4|$5}} konumundaki {{link|Thread:$2|$3}} başlığı {{user|$1}} tarafından geri eklendi {{summary|$6}}",
-    "block": "{{user|$2}}, $3 nedeniyle {{user|$1}} tarafından engellendi {{flags|$4}}{{summary|$5}}",
+    "block": "{{user|$2}}, {{summary|$5}} nedeniyle {{user|$1}} tarafından engellendi {{flags|$4}} ($3)",
     "unblock": "{{user|$2}} kullanıcısının engeli {{user|$1}} tarafından kaldırıldı {{summary|$3}}",
     "reblock": "{{user|$2}} kullanıcısının engel nedenini {{user|$1}} tarafından $3 ile değiştirildi {{flags|$4}}{{summary|$5}}",
     "protect": "{{link|$2}} sayfası {{user|$1}} tarafından $3 kuralları ile korundu {{summary|$4}}",
@@ -19,13 +19,13 @@
     "moveprotect": "Koruma kuralı $2, {{user|$1}} tarafından {{link|$3}} sayfasına taşındı {{summary|$4}}",
     "rights": "{{user|$2}} kullanıcısının $3 hakları {{user|$1}} tarafından $4 ile değiştirildi {{summary|$5}}",
     "delete": "$2, {{user|$1}} tarafından silindi {{summary|$3}}",
-    "restore": "{{link|$2}} sayfasının revizelerini {{user|$1}} tarafından geri eklendi {{summary|$3}}",
-    "revdel": "{{link|$2}} sayfasının revizelerini {{user|$1}} tarafından sildi {{summary|$3}}",
+    "restore": "{{link|$2}} sayfasının revizeleri {{user|$1}} tarafından geri eklendi {{summary|$3}}",
+    "revdel": "{{link|$2}} sayfasının revizeleri {{user|$1}} tarafından silindi {{summary|$3}}",
     "logdel": "{{user|$1}}, {{link|$2}} sayfasında gizli bir log aktivitesine sahip {{summary|$3}}",
     "upload": "{{link|$2|$3}}, {{user|$1}} tarafından yüklendi {{summary|$4}}",
     "reupload": "{{link|$2|$3}}, {{user|$1}} tarafından yeniden yüklendi {{summary|$4}}",
     "move": "$2, {{user|$1}} tarafından {{link|$3}} sayfasına taşındı {{summary|$4}}",
-    "moveredir": "$2, {{user|$1}} tarafından bir yönlendirme üzerinden {{link|$3}} sayfasına taşındı {{summary|$4}}",
+    "moveredir": "$2 sayfası {{user|$1}} tarafından bir yönlendirme ile {{link|$3}} sayfasına taşındı {{summary|$4}}",
     "merge": "$2 ve {{link|$3}} sayfalarının geçmişleri {{user|$1}} tarafından birleştirildi {{summary|$4}}",
     "avatar": "{{user|$1}} avatarını değiştirdi",
     "remavatar": "{{user|$2}} kullanıcısının avatarı {{user|$1}} tarafından kaldırıldı",
@@ -35,13 +35,13 @@
     "chatbanadd": "{{user|$2}} kullanıcısı $3 nedeniyle {{user|$1}} tarafından sohbetten engellendi {{summary|$4}}",
     "chatbanchange": "{{user|$2}} kullanıcısının engel nedeni {{user|$1}} tarafından $3 ile değiştirildi {{summary|$4}}",
     "chatbanremove": "{{user|$2}} kullanıcısının sohbet engeli {{user|$1}} tarafından bitirildi {{summary|$3}}",
-    "board-1201": "$1 kullanıcısının duvarı",
-    "board-2001": "$1 kullanıcısının panosu",
+    "board-1201": "$1 kullanıcı duvarı",
+    "board-2001": "$1 kullanıcı panosu",
     "diff": "fark",
     "talk": "t",
     "contribs": "k",
     "rights-none": "(yok)",
-    "discussions": "{{user|$1}} tarafından $7 kategorisine $2 tartışması {{dlink|$3|$4|$5}} eklendi {{summary|$8}}",
+    "discussions": "{{user|$1}} tarafından $7 kategorisindeki durumu $2 olan tartışmaya {{dlink|$3|$4|$5}} eklendi {{summary|$8}}",
     "discussions-reply": "yanıt",
     "discussions-create-post": "paylaşıldı",
     "discussions-create-report": "rapor edildi",
@@ -50,7 +50,7 @@
     "discussions-modified": "düzenlendi",
     "discussions-moved": "taşındı",
     "feature-enable": "etkinleştirildi",
-    "feature-disable": "etkisizleştirildi",
+    "feature-disable": "devre dışı bırakıldı",
     "feature-wgEnableAjaxPollExt": "anketler",
     "feature-wgEnableBlogArticles": "web günlükleri",
     "feature-wgEnableArticleCommentsExt": "makale yorumları",
